turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: '=' expected but ';' found.
for (i <-0 to colors.length-2){
^